@@ -1,3 +1,11 @@
+2005-03-30  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/shadow.c (schedule_linux_call, xnshadow_start): Use
+	adeos_processor_id() instead of smp_processor_id(), so we don't
+	trigger Linux preemption debug traps inadvertently.
+
+	* nucleus/shadow.c (xnshadow_map): Disable preemption as needed.
+
 2005-03-29  Philippe Gerum  <rpm@xenomai.org>
 
 	* testsuite/cruncher/cruncher.c (main): Switch the timer off upon
